fix: drag and drop on mobile doesn't look great

--- a/FE/src/app/pages/manage-players/manage-players.component.scss
+++ b/FE/src/app/pages/manage-players/manage-players.component.scss
@@ -102,7 +102,7 @@ footer{
         }
     }
 
-    .players{
+    .players {
         margin-top: 10px;
     }
 
@@ -120,6 +120,11 @@ footer{
             height: 35px;
             padding-left: 20px;
         }
+    }
+
+    .placeholder{
+        height: 50px;
+        margin-top: 10px;
     }
 
     .arrow-icon{
